# OOPs

1 SOLID/1 Single Responsibility Principle/: bakery.cc
1 SOLID/3. Liskovs Substitution Principle/: bird.cc
1 SOLID/5. Dependency Inversion Principle/: git_gub.cc
2 Design Patterns/7 Adapter Pattern/: Adaptee.hpp  Adapter.hpp  Target.hpp  main.cpp  program
2 Design Patterns/8 Command Pattern/: Command.hpp  RemoteControl.hpp  TV.cpp  TV.hpp  TurnOffCommand.hpp  TurnOnCommand.hpp  main.cpp  program
3 Machine Code/alram/: alram.cpp  (+1 more)
3 Machine Code/cab_booking_system/: CMakeLists.txt  main.cpp
3 Machine Code/cab_booking_system/include/enums/: RideStatus.hpp
3 Machine Code/cab_booking_system/include/models/: Cab.hpp  Driver.hpp  Location.hpp  Rating.hpp  Ride.hpp  Rider.hpp  User.hpp
3 Machine Code/cab_booking_system/include/services/: CabBookingManager.hpp  DefaultPricingStrategy.hpp  DriverLocationService.hpp  DriverService.hpp  MatchingEngine.hpp  MatchingStrategy.hpp  NearestDriverStrategy.hpp  PricingStrategy.hpp  RatingSystem.hpp  RideService.hpp  RiderService.hpp
3 Machine Code/cab_booking_system/src/: Location.cpp  User.cpp
3 Machine Code/cab_booking_system/src/models/: Cab.cpp  Driver.cpp  Location.cpp  Rating.cpp  Ride.cpp  Rider.cpp
3 Machine Code/cab_booking_system/src/services/: CabBookingManager.cpp  DefaultPricingStrategy.cpp  DriverLocationService.cpp  DriverService.cpp  MatchingEngine.cpp  NearestDriverStrategy.cpp  RatingSystem.cpp  RideService.cpp  RiderService.cpp
Test/: MyClass.cc  MyClass.h  main.cc  test1.cc  test2.cc  test3.cc
(+290 files in other folders)
